회원가입 완료, 구글 로그인 오류, 아이디/비밀번호 찾기 구현 필요

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
         </activity>
         <activity android:name=".RegisterActivity" />
 
+        <service
+            android:name=".ForceQuitManageService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false" />
     </application>
 
 </manifest>
