Google Login 오류 수정, 아이디 비밀번호 찾기 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="false" />
+
+        <activity android:name=".FindIDPasswordActivity" />
     </application>
 
 </manifest>
