웹툰 뷰 페이지 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
             android:stopWithTask="false" />
 
         <activity android:name=".FindIDPasswordActivity" />
-        <activity android:name=".ContentsMainDir.ContentsMainActivity"></activity>
+        <activity android:name=".ContentsMainDir.ContentsMainActivity" />
+        <activity android:name=".WebtoonDir.WebtoonActivity"></activity>
     </application>
 
 </manifest>
