뷰 페이지 완성, 로그인 페이지 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,8 @@
 
         <activity android:name=".FindIDPasswordActivity" />
         <activity android:name=".ContentsMainDir.ContentsMainActivity" />
-        <activity android:name=".WebtoonDir.WebtoonActivity"></activity>
+        <activity android:name=".WebtoonDir.WebtoonActivity" />
+        <activity android:name=".LoginDir.LoginMethodActivity"></activity>
     </application>
 
 </manifest>
