댓글 페이지 완료 like 데이터베이스 연동 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,8 @@
         <activity android:name=".FindIDPasswordActivity" />
         <activity android:name=".ContentsMainDir.ContentsMainActivity" />
         <activity android:name=".WebtoonDir.WebtoonActivity" />
-        <activity android:name=".LoginDir.LoginMethodActivity"></activity>
+        <activity android:name=".LoginDir.LoginMethodActivity" />
+        <activity android:name=".CommentDir.CommentActivity"></activity>
     </application>
 
 </manifest>
