--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,8 @@
         <activity android:name=".FindIDPasswordActivity" />
         <activity android:name=".ContentsMainDir.ContentsMainActivity" />
         <activity android:name=".WebtoonDir.WebtoonActivity" />
-        <activity android:name=".LoginDir.LoginMethodActivity" />
         <activity android:name=".CommentDir.CommentActivity"></activity>
+        <activity android:name=".SettingsDir.SettingsActivity"/>
     </application>
 
 </manifest>
