내 캐시 페이지 완료, 카테고리 별로 어뎁터를 따로 설정해서 관리 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".CommentDir.CommentActivity" />
         <activity android:name=".LoginDir.LoginActivity" />
         <activity android:name=".MyPageDir.MyPageActivity" />
+        <activity android:name=".MyCashDir.MyCashActivity"></activity>
     </application>
 
 </manifest>
