문의하기 완료, 공지사항 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".UserInformation"
@@ -50,13 +51,17 @@
             android:exported="true"
             android:stopWithTask="false" />
 
-        <activity android:name=".FindIDPasswordActivity" />
         <activity android:name=".ContentsMainDir.ContentsMainActivity" />
         <activity android:name=".WebtoonDir.WebtoonActivity" />
         <activity android:name=".CommentDir.CommentActivity" />
         <activity android:name=".LoginDir.LoginActivity" />
         <activity android:name=".MyPageDir.MyPageActivity" />
-        <activity android:name=".MyCashDir.MyCashActivity"></activity>
+        <activity android:name=".MyCashDir.MyCashActivity" />
+        <activity android:name=".WebtoonMovieDir.WebtoonMovieActivity" />
+        <activity android:name=".FindPasswordDir.FindPasswordActivity" />
+        <activity android:name=".FindPasswordDir.SetNewPasswordActivity" />
+        <activity android:name=".ConsultDir.ConsultActivity" />
+        <activity android:name=".noticeDir.NoticeActivity"></activity>
     </application>
 
 </manifest>
