1:1문의, 공지사항, 이용약관 완료 / FAQ 구현중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,9 @@
         <activity android:name=".FindPasswordDir.FindPasswordActivity" />
         <activity android:name=".FindPasswordDir.SetNewPasswordActivity" />
         <activity android:name=".ConsultDir.ConsultActivity" />
-        <activity android:name=".noticeDir.NoticeActivity"></activity>
+        <activity android:name=".noticeDir.NoticeActivity" />
+        <activity android:name=".SettingsDir.TermsAndConditionActivity" />
+        <activity android:name=".FAQDir.FAQActivity"></activity>
     </application>
 
 </manifest>
