세부사항 수정 완료(카테고리 끝에 더보기 아이템 미구현), 내 작품 관리 페이지 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,8 @@
         <activity android:name=".ConsultDir.ConsultActivity" />
         <activity android:name=".noticeDir.NoticeActivity" />
         <activity android:name=".SettingsDir.TermsAndConditionActivity" />
-        <activity android:name=".FAQDir.FAQActivity"></activity>
+        <activity android:name=".FAQDir.FAQActivity" />
+        <activity android:name=".ManageMyWorksDir.ManageMyWorksActivity"></activity>
     </application>
 
 </manifest>
