전체보기 기능 구현 완료, 검색 기능 구현 중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,9 @@
         <activity android:name=".SettingsDir.TermsAndConditionActivity" />
         <activity android:name=".FAQDir.FAQActivity" />
         <activity android:name=".ManageMyWorksDir.ManageMyWorksActivity" />
-        <activity android:name=".MainActivityDir.ExpandedContentsActivity"></activity>
+        <activity android:name=".MainActivityDir.ExpandedContentsActivity" />
+        <activity android:name=".MainActivityDir.SelectedContetnsExpandActivity" />
+        <activity android:name=".SearchDir.SearchActivity"></activity>
     </application>
 
 </manifest>
