댓글, 답글 달기 미흡하게 완료(미흡한 점을 개선하기 위해 RecyclerView를 ExpandableListView로 싹뜯어고치는 작업이 필요), 신고하기 페이지 구현 중(서버 코드만 작성하면 완료)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,8 @@
         <activity android:name=".ManageMyWorksDir.ManageMyWorksActivity" />
         <activity android:name=".MainActivityDir.ExpandedContentsActivity" />
         <activity android:name=".MainActivityDir.SelectedContetnsExpandActivity" />
-        <activity android:name=".SearchDir.SearchActivity"></activity>
+        <activity android:name=".SearchDir.SearchActivity" />
+        <activity android:name=".CommentDir.AccusationAcitivity"></activity>
     </application>
 
 </manifest>
