내 작품 fragment완성, 결제모듈 보류, 고도화 진행중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,7 @@
         <activity android:name=".MainActivityDir.ExpandedContentsActivity" />
         <activity android:name=".MainActivityDir.SelectedContetnsExpandActivity" />
         <activity android:name=".SearchDir.SearchActivity" />
-        <activity android:name=".CommentDir.AccusationAcitivity"></activity>
+        <activity android:name=".CommentDir.AccusationActivity"></activity>
     </application>
 
 </manifest>
