캐시 보유량에 따른 작품 구매 및 보기 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
         <activity android:name=".FindPasswordDir.FindPasswordActivity" />
         <activity android:name=".FindPasswordDir.SetNewPasswordActivity" />
         <activity android:name=".ConsultDir.ConsultActivity" />
-        <activity android:name=".noticeDir.NoticeActivity" />
+        <activity android:name=".NoticeDir.NoticeActivity" />
         <activity android:name=".SettingsDir.TermsAndConditionActivity" />
         <activity android:name=".FAQDir.FAQActivity" />
         <activity android:name=".ManageMyWorksDir.ManageMyWorksActivity" />
